# ToDoExample

./: .gitignore  CHANGELOG.md  PHASE1_COMPLETE.md  README.md  TESTS_README.md  app.js  app.webmanifest  index.html  jobs-full.json  package.json  service-worker.js  styles.css
.github/workflows/: accessibility.yml
backend/: .env.example  README.md  pyproject.toml  pytest.ini  todos.db
backend/app/: config.py  database.py  deps.py  main.py  models.py  schemas.py
backend/app/api/: __init__.py  auth.py  todos.py  users.py
backend/app/core/: security.py
backend/docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
backend/tests/: conftest.py  test_auth.py  test_health.py  test_todos.py
docs/plans/: 2026-01-09-fastapi-backend-design.md
scripts/: axe-run.js  serve.js
tests/: axe-report.json  visual-accessibility.test.js
